--- a/Project/Layouts/Layout 1.uistate.xml
+++ b/Project/Layouts/Layout 1.uistate.xml
@@ -4,10 +4,10 @@
 It is entirely optional and the project will load without it.  If you are placing the project under source control,
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
-        <position-x>683</position-x>
+        <position-x>721.147</position-x>
         <position-y>384</position-y>
         <position-z>305.176</position-z>
-        <lookat-x>683</lookat-x>
+        <lookat-x>721.147</lookat-x>
         <lookat-y>384</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
@@ -23,8 +23,11 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Layer 0" />
+    <active-layer name="Start Screen" />
     <layers>
+        <layer locked="0" name="Background" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Game Over" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Start Screen" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
